--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,32 +7,82 @@
 // Mixins
 
 // Styles
+$dark-color: black;
+$bright-color: teal;
+$light-color: cyan;
+$global-padding: 10px;
+$font-size: 200px;
+
+
+
 body{
-  background-color: orange;
+  background-color: green;
+
   text-align: center;
-  color: #EEE;
+}
+
+@media screen and (min-width: 600px) {
+  body{
+    background-color: cyan;
+  }
+
+  .block_family li{
+    display: inline-block;
+    width: 100px;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  body {
+    background-color: #222;
+  }
+
+  .block_family li{
+    display: inline-block;
+    width: 70px;
+    color: #222;
+  }
+}
+
+@mixin changer($size, $color) {
+  font-size: 500px;
+  color: $color;
 }
 
 h1, h2, h3, h4{
   font-family: "Helvetica Neue", "Helvetica", sans-serif;
+
 }
 
 h1{
   padding: 20px;
+  font-size: 300px;
+  color: orange;
+  //@include changer(100px, $dark-color);
 }
 
 h2{
 
 }
 
-
 .block_family{
   max-width:350px;
-  margin:auto;
+  margin: auto;
+  position: relative;
+  padding-top: 5px;
+  height: 95px;
+  width: 500px;
+  text-align: center;
 }
 
 .block_family li{
-  background-color: #222;
-  margin-bottom: 20px;
-  padding: 20px;
+ display: inline-block;
+ background-color: orange;
+ margin-bottom: 20px;
+ padding: 20px;
+
 }
+//222
+
+@import "partials/_reset";
+@import "partials/_clearfix";
