--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,82 +7,130 @@
 // Mixins
 
 // Styles
+@import "partials/_reset";
+@import "partials/_clearfix";
+
 $dark-color: black;
 $bright-color: teal;
-$light-color: cyan;
+$light-color: orange;
 $global-padding: 10px;
 $font-size: 200px;
 
-
-
 body{
-  background-color: green;
+  background-color: orange;
 
   text-align: center;
-}
-
-@media screen and (min-width: 600px) {
-  body{
-    background-color: cyan;
-  }
-
-  .block_family li{
-    display: inline-block;
-    width: 100px;
-  }
 }
 
 @media screen and (min-width: 900px) {
   body {
     background-color: #222;
   }
-
-  .block_family li{
-    display: inline-block;
-    width: 70px;
-    color: #222;
-  }
 }
 
 @mixin changer($size, $color) {
-  font-size: 500px;
+  font-size: $size;
   color: $color;
 }
 
 h1, h2, h3, h4{
   font-family: "Helvetica Neue", "Helvetica", sans-serif;
-
 }
 
 h1{
   padding: 20px;
-  font-size: 300px;
-  color: orange;
-  //@include changer(100px, $dark-color);
+  font-size: 55px;
+  color: #222;
+}
+
+@media screen and (min-width: 600px){
+  h1{
+    color: white;
+  }
+}
+
+@media screen and (min-width: 900px){
+  h1{
+    color: orange;
+  }
 }
 
 h2{
+  font-size: 34px;
+  color: white;
+}
 
+@media screen and (min-width: 600px){
+  h2{
+    color: orange;
+  }
+}
+
+@media screen and (min-width: 900px){
+  h2{
+    color: #222;
+  }
 }
 
 .block_family{
-  max-width:350px;
   margin: auto;
   position: relative;
   padding-top: 5px;
-  height: 95px;
-  width: 500px;
+  height: 100px;
   text-align: center;
+  max-width: 400px
+}
+
+@media screen and (min-width: 600px) {
+ .block_family{
+  max-width: 500px;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .block_family{
+    max-width: 800px;
+  }
 }
 
 .block_family li{
  display: inline-block;
- background-color: orange;
  margin-bottom: 20px;
+ width: 300px;
+ background-color: #222;
  padding: 20px;
-
 }
-//222
 
-@import "partials/_reset";
-@import "partials/_clearfix";
+@media screen and (min-width: 600px){
+  .block_family li{
+    display: inline-block;
+    background-color: #222;
+    width: 205px;
+    padding: 20px;
+    margin-bottom: 5px;
+  }
+}
+
+@media screen and (min-width: 600px){
+  li:nth-child(2n) {
+    background-color: white;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .block_family li{
+    display: inline-block;
+    background-color: orange;
+    padding:20px;
+    width: 215px;
+    margin-bottom: 10px;
+    margin-right: 5px;
+  }
+}
+
+@media screen and (min-width: 900px){
+  li:nth-child(3n+2) {
+    background-color: white;
+  }
+}
+
